--- a/src/app/shared/accesspoint-list/accesspoint-list.component.html
+++ b/src/app/shared/accesspoint-list/accesspoint-list.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="row mt-3 mx-2 justify-content-center">
+    <div class="row justify-content-center">
         <div class="col-lg-6 col-md-12">
             <div class="search-bar-container">
                 <input class="form-control custom-input-filed" type="text" name="searchKeyword" [(ngModel)]="searchKeyword" (ngModelChange)="searchAccessPoints()" placeholder="Search be keyword (ssid, bssid, manufacturer, device type etc.)">
@@ -15,7 +15,7 @@
     </div>
     
     <div *ngIf="filteredAccessPoints !== undefined">
-        <div class="row mt-3 mx-2 justify-content-center">
+        <div class="row mt-3 justify-content-center">
             <div class="col-12">
                 <div class="scrollable-table">
                     <table class="table table-hover table-sm">
