--- a/src/app/features/list/list.component.html
+++ b/src/app/features/list/list.component.html
@@ -1,7 +1,9 @@
 <app-navigation-wrapper>
-    <app-accesspoint-list [accessPointObservable]="accessPointsObservable"
-        (accessPointRangeDeletedClick)="deleteAccessPointRange($event)"
-        (accessPointRangeDisplayStatusClick)="changeAccessPointRangeDisplayStatus($event)"
-        (accessPointClick)="showDetailsClick($event)">
-    </app-accesspoint-list>
+    <div class="p-3">
+        <app-accesspoint-list [accessPointObservable]="accessPointsObservable"
+            (accessPointRangeDeletedClick)="deleteAccessPointRange($event)"
+            (accessPointRangeDisplayStatusClick)="changeAccessPointRangeDisplayStatus($event)"
+            (accessPointClick)="showDetailsClick($event)">
+        </app-accesspoint-list>
+    </div>
 </app-navigation-wrapper>
