--- a/src/app/shared/accesspoint-map/accesspoint-map-filter/accesspoint-map-filter.component.css
+++ b/src/app/shared/accesspoint-map/accesspoint-map-filter/accesspoint-map-filter.component.css
@@ -1,16 +1,9 @@
 .apm-ol-map-filter {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    height: auto;
-    width: 100%;
-    background-image: linear-gradient(135deg, var(--apm-primary), var(--apm-accent)) !important;
-    transition: .2s opacity ease-in-out !important;
-    opacity: 50%;
+    background: var(--apm-light) !important;
 }
 
-.apm-ol-map-filter:hover {
-    opacity: 100%;
+.apm-ol-map-filter p {
+    color: var(--apm-primary) !important;
 }
 
 .apm-ol-map-filter-form-header {
