--- a/src/app/shared/accesspoint-map/accesspoint-map-filter/accesspoint-map-filter.component.html
+++ b/src/app/shared/accesspoint-map/accesspoint-map-filter/accesspoint-map-filter.component.html
@@ -1,6 +1,6 @@
 <div class="apm-ol-map-filter">
     <div class="container-fluid">
-        <div class="row justify-content-center my-2">
+        <div class="row justify-content-center p-1">
             <div class="col-lg-3 col-md-12 px-5 text-center">
                 <p class="apm-ol-map-filter-form-header">Keyword</p>
                 <form [formGroup]="keywordFilterForm">
