--- a/src/app/features/run/run.component.css
+++ b/src/app/features/run/run.component.css
@@ -1,22 +1,7 @@
-.run-selection-container {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    height: auto;
-    width: 100%;
-    background-image: linear-gradient(135deg, var(--apm-primary), var(--apm-accent)) !important;
-    transition: .2s opacity ease-in-out !important;
-    opacity: 50%;
-}
-
-.run-selection-container:hover {
-    opacity: 100%;
-}
-
 .run-selection-form-header {
     padding: 0;
     margin: 0;
-    color: var(--apm-light) !important;
+    color: var(--apm-primary) !important;
 }
 
 input[type=text],
