--- a/src/app/features/statistics/statistics.component.html
+++ b/src/app/features/statistics/statistics.component.html
@@ -1,60 +1,52 @@
-<app-navbar></app-navbar>
-
-<div class="container-fluid">
-    <div class="row justify-content-center mt-2">
-        <div class="col-lg-4 col-md-12 mx-3 px-5 text-center">
-            <div *ngIf="encryptionChartOptions !== undefined; else encryptionChartNotFound">
-                <h3>Encryption types</h3>
-                <canvas baseChart
-                    [data]="encryptionChartOptions.data"
-                    [options]="encryptionChartOptions.options"
-                    [type]="encryptionChartOptions.type">
-                </canvas>
+<app-navigation-wrapper>
+    <div class="container-fluid">
+        <div class="row justify-content-center my-3">
+            <div class="col-lg-4 col-md-12 mx-3 px-5 text-center">
+                <div *ngIf="encryptionChartOptions !== undefined; else encryptionChartNotFound">
+                    <h3>Encryption types</h3>
+                    <canvas baseChart [data]="encryptionChartOptions.data" [options]="encryptionChartOptions.options"
+                        [type]="encryptionChartOptions.type">
+                    </canvas>
+                </div>
+                <ng-template #encryptionChartNotFound>
+                    <h3 class="pt-5">No encryption data found</h3>
+                </ng-template>
             </div>
-            <ng-template #encryptionChartNotFound>
-                <h3 class="pt-5">No encryption data found</h3>
-            </ng-template>
+            <div class="col-lg-4 col-md-12 mx-3 px-5 text-center">
+                <div *ngIf="frequencyChartOptions !== undefined; else frequencyChartNotFound">
+                    <h3>Signal frequencies</h3>
+                    <canvas baseChart [data]="frequencyChartOptions.data" [options]="frequencyChartOptions.options"
+                        [type]="frequencyChartOptions.type">
+                    </canvas>
+                </div>
+                <ng-template #frequencyChartNotFound>
+                    <h3 class="pt-5">No signal frequency data found</h3>
+                </ng-template>
+            </div>
         </div>
-        <div class="col-lg-4 col-md-12 mx-3 px-5 text-center">
-            <div *ngIf="frequencyChartOptions !== undefined; else frequencyChartNotFound">
-                <h3>Signal frequencies</h3>
-                <canvas baseChart
-                    [data]="frequencyChartOptions.data"
-                    [options]="frequencyChartOptions.options"
-                    [type]="frequencyChartOptions.type">
-                </canvas>
+        <div class="row justify-content-center my-5">
+            <div class="col-lg-5 col-md-12 px-5 text-center">
+                <div *ngIf="signalRangeChartOptions !== undefined; else signalRangeChartNotFound">
+                    <h3>Highest signal range</h3>
+                    <canvas baseChart [data]="signalRangeChartOptions.data" [options]="signalRangeChartOptions.options"
+                        [type]="signalRangeChartOptions.type">
+                    </canvas>
+                </div>
+                <ng-template #signalRangeChartNotFound>
+                    <h3 class="pt-5">No signal range data found</h3>
+                </ng-template>
             </div>
-            <ng-template #frequencyChartNotFound>
-                <h3 class="pt-5">No signal frequency data found</h3>
-            </ng-template>
-        </div>
-    </div>
-    <div class="row justify-content-center mt-3">
-        <div class="col-lg-4 col-md-12 px-5 text-center">
-            <div *ngIf="signalRangeChartOptions !== undefined; else signalRangeChartNotFound">
-                <h3>Highest signal range</h3>
-                <canvas baseChart
-                    [data]="signalRangeChartOptions.data"
-                    [options]="signalRangeChartOptions.options"
-                    [type]="signalRangeChartOptions.type">
-                </canvas>
+            <div class="col-lg-5 col-md-12 px-5 text-center">
+                <div *ngIf="manufacturerChartOptions !== undefined; else manufacturerChartNotFound">
+                    <h3>Most common manufacturer</h3>
+                    <canvas baseChart [data]="manufacturerChartOptions.data" [options]="manufacturerChartOptions.options"
+                        [type]="manufacturerChartOptions.type">
+                    </canvas>
+                </div>
+                <ng-template #manufacturerChartNotFound>
+                    <h3 class="pt-5">No manufacturer data found</h3>
+                </ng-template>
             </div>
-            <ng-template #signalRangeChartNotFound>
-                <h3 class="pt-5">No signal range data found</h3>
-            </ng-template>
-        </div>
-        <div class="col-lg-4 col-md-12 px-5 text-center">
-            <div *ngIf="manufacturerChartOptions !== undefined; else manufacturerChartNotFound">
-                <h3>Most common manufacturer</h3>
-                <canvas baseChart
-                    [data]="manufacturerChartOptions.data"
-                    [options]="manufacturerChartOptions.options"
-                    [type]="manufacturerChartOptions.type">
-                </canvas>
-            </div>
-            <ng-template #manufacturerChartNotFound>
-                <h3 class="pt-5">No manufacturer data found</h3>
-            </ng-template>
         </div>
     </div>
-</div>
+</app-navigation-wrapper>
