Enh: Router outlet moved to Navigation wrapper

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<router-outlet>
-    <app-loading-indicator></app-loading-indicator>
-</router-outlet>
+<app-navigation-wrapper>
+    <router-outlet>
+        <app-loading-indicator></app-loading-indicator>
+    </router-outlet>
+</app-navigation-wrapper>
+
 <app-toast></app-toast>
