Enh: Authentication page sidebar support

--- a/src/app/shared/navigation-wrapper/navigation-wrapper.component.css
+++ b/src/app/shared/navigation-wrapper/navigation-wrapper.component.css
@@ -28,3 +28,9 @@
 .sidebar-nav-item:hover {
     color: var(--apm-primary) !important;
 }
+
+.sidebar-element-disabled {
+    color: var(--apm-accent) !important;
+    pointer-events: none !important;
+    cursor: default !important;
+}
