Enh: Download buttons added to list feature

--- a/src/app/shared/accesspoint-list/accesspoint-list.component.html
+++ b/src/app/shared/accesspoint-list/accesspoint-list.component.html
@@ -10,6 +10,8 @@
                 <button class="btn btn-primary col-2 mx-1" (click)="deleteAccessPointRange()">Delete</button>
                 <button class="btn btn-primary col-2 mx-1" (click)="changeAccessPointDisplayStatusRangeDisplay()">Display</button>
                 <button class="btn btn-primary col-2 mx-1" (click)="changeAccessPointDisplayStatusRangeHide()">Hide</button>
+
+                <ng-content></ng-content>
             </div>
         </div>
     </div>
