--- a/src/app/features/list/list.component.html
+++ b/src/app/features/list/list.component.html
@@ -3,5 +3,13 @@
         (accessPointRangeDeletedClick)="deleteAccessPointRange($event)"
         (accessPointRangeDisplayStatusClick)="changeAccessPointRangeDisplayStatus($event)"
         (accessPointClick)="showDetailsClick($event)">
+
+        <div ngbDropdown class="d-inline-block">
+            <button type="button" class="btn btn-primary px-4" id="download-dropdown" ngbDropdownToggle>Download</button>
+            <div ngbDropdownMenu aria-labelledby="download-dropdown">
+                <button class="dropdown-button" (click)="downloadNativeKml()" ngbDropdownItem>Native KML Format</button>
+                <button class="dropdown-button" (click)="downloadWigleCsv()" ngbDropdownItem>WiGLE CSV Format</button>
+            </div>
+        </div>
     </app-accesspoint-list>
 </div>
