--- a/src/app/shared/accesspoint-details-v2/accesspoint-details-v2-details/accesspoint-details-v2-details.component.css
+++ b/src/app/shared/accesspoint-details-v2/accesspoint-details-v2-details/accesspoint-details-v2-details.component.css
@@ -3,6 +3,10 @@ th {
     font-weight: bold;
 }
 
+tr {
+    border-color: var(--apm-primary) !important;
+}
+
 td {
     color: var(--apm-accent);
 }
