--- a/src/app/shared/navigation-wrapper/navigation-wrapper.component.html
+++ b/src/app/shared/navigation-wrapper/navigation-wrapper.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid apm-theme-background">
     <div class="row">
         <div class="sidebar col-auto sticky-top">
             <div class="d-flex flex-column  justify-content-end ">
