--- a/src/app/shared/accesspoint-map/accesspoint-map-filter/accesspoint-map-filter.component.css
+++ b/src/app/shared/accesspoint-map/accesspoint-map-filter/accesspoint-map-filter.component.css
@@ -1,5 +1,5 @@
 .apm-ol-map-filter {
-    background: var(--apm-light) !important;
+    background: var(--apm-dark) !important;
 }
 
 .apm-ol-map-filter p {
@@ -10,9 +10,4 @@
     padding: 0;
     margin: 0;
     color: var(--apm-light) !important;
-}
-
-input[type=text],
-.datapicker-control {
-    background-color: var(--apm-light) !important;
 }
