--- a/src/app/shared/navigation-wrapper/navigation-wrapper-upload/navigation-wrapper-upload.component.html
+++ b/src/app/shared/navigation-wrapper/navigation-wrapper-upload/navigation-wrapper-upload.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid upload-container">
     <div class="row p-3">
         <div class="col">
             <button (click)="closeModal()" type="button" class="btn-close float-end"></button>
