--- a/src/app/shared/navigation-wrapper/navigation-wrapper.component.css
+++ b/src/app/shared/navigation-wrapper/navigation-wrapper.component.css
@@ -1,6 +1,7 @@
 .sidebar {
-    background-image: linear-gradient(135deg, var(--apm-primary), var(--apm-accent)) !important;
-    color: var(--apm-light) !important;
+    background-color: var(--apm-dark) !important;
+    color: var(--apm-primary) !important;
+    border-right: .1rem solid var(--apm-accent);
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.3);
 }
 
@@ -20,13 +21,13 @@
 }
 
 .sidebar-nav-item {
-    color: var(--apm-light) !important;
+    color: var(--apm-primary) !important;
     cursor: pointer;
     text-decoration: none !important;
 }
 
 .sidebar-nav-item:hover {
-    color: var(--apm-primary) !important;
+    color: var(--apm-accent) !important;
 }
 
 .sidebar-element-disabled {
